Add OTA updates

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,3 +25,4 @@ lib_deps =
 	thingpulse/ESP8266 Weather Station@^2.2.0
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.6.1
 	squix78/JsonStreamingParser@^1.0.5
+    otadrive/OTAdrive
