--- a/platformio.ini
+++ b/platformio.ini
@@ -26,3 +26,4 @@ lib_deps =
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.6.1
 	squix78/JsonStreamingParser@^1.0.5
     otadrive/OTAdrive
+    bblanchon/ArduinoJson
