--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
+upload_speed = 460800
 lib_deps = 
     WiFiManager
     ESP8266WebServer
